--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcsh 'Jérôme Bonaparte, King of Westphalia, 1784-1860 -- Fiction'
 - !lcsh 'Westphalia (Kingdom) -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: '"If Youth but Knew!"'
 url: http://www.gutenberg.org/ebooks/44286
